--- a/kind/OUTER.html
+++ b/kind/OUTER.html
@@ -40,15 +40,13 @@
         <div id="ucen">
           <nav>
             <ul id="ulist">
-              <li><a href="../outerfile/zip.html" target="jwframe">Zip-up</a></li>
-              <li><a href="../outerfile/Fleece.html" target="jwframe">Fleece</a></li>
-              <li><a href="../outerfile/Coat.html" target="jwframe">Coat</a></li>
-              <li><a href="../outerfile/Cardigan.html" target="jwframe">Cardigan</a></li>
-              <li><a href="../outerfile/Jacket.html" target="jwframe">Jackt</a></li>
+              <li><a href="../outerfile/Coat.html" target="jwframe">코트</a></li>
+              <li><a href="../outerfile/Jacket.html" target="jwframe">자켓</a></li>
+              <li><a href="../outerfile/other.html" target="jwframe">아우터</a></li>
             </ul>
           </nav>
         </div>
-        <iframe id="frames" src="../outerfile/zip.html" name="jwframe"></iframe>
+        <iframe id="frames" src="../outerfile/Coat.html" name="jwframe"></iframe>
       </main>
 
       <footer>
