--- a/outerfile/Coat.html
+++ b/outerfile/Coat.html
@@ -10,14 +10,22 @@
   <h2>코트</h2>
   <section>
     <div class="detail">
-      <img src="../Image/OUTER/coat.jpg">
+      <img src="../Image/OUTER/트렌치코트.jpg">
       <b>
-        <p>코트</p>
+        <p>트렌치</p>
       </b>
-      <p>털 또는 가죽 같은 질좋은 직물로 만들어진 무릎 위까지 오는 코트. 더블 버튼과 바깥 주머니가 달려 있다.</p>
+      <p>방수 소재로 만들어진 긴 코트로, 벨트가 특징입니다.</p>
     </div><br><br><br><br><br><br>
   </section>
-
+  <section>
+    <div class="detail">
+      <img src="../Image/OUTER/피코트.jpg">
+      <b>
+        <p>피</p>
+      </b>
+      <p>짧고 두꺼운 울 소재의 코트로, 주로 해군 제복에서 유래했습니다.</p>
+    </div><br><br><br><br><br><br>
+  </section>
 </body>
 
 </html>
