--- a/kind/ACC.html
+++ b/kind/ACC.html
@@ -40,15 +40,16 @@
         <div id="ucen">
           <nav>
             <ul id="ulist">
-              <li><a href="../outerfile/zip.html" target="jwframe">Zip-up</a></li>
-              <li><a href="../outerfile/Fleece.html" target="jwframe">Fleece</a></li>
-              <li><a href="../outerfile/Coat.html" target="jwframe">Coat</a></li>
-              <li><a href="../outerfile/Cardigan.html" target="jwframe">Cardigan</a></li>
-              <li><a href="../outerfile/Jacket.html" target="jwframe">Jackt</a></li>
+              <li><a href="../acc/belt.html" target="jwframe">벨트</a></li>
+              <li><a href="../acc/bracelet.html" target="jwframe">팔찌</a></li>
+              <li><a href="../acc/earing.html" target="jwframe">귀걸이</a></li>
+              <li><a href="../acc/neckles.html" target="jwframe">목걸이</a></li>
+              <li><a href="../acc/hat.html" target="jwframe">모자</a></li>
+              <li><a href="../acc/watch.html" target="jwframe">시계</a></li>
             </ul>
           </nav>
         </div>
-        <iframe id="frames" src="../outerfile/zip.html" name="jwframe"></iframe>
+        <iframe id="frames" src="../acc/belt.html" name="jwframe"></iframe>
       </main>
 
       <footer>
@@ -56,8 +57,7 @@
           <ul>
             <li><a href="../other/TOP.html">TOP 10</a></li>
             <li><a href="../other/basket.html">Shopping basket</a></li>
-            <li><a href="../register/register.html" target="_blank">Sign up</a></li>
-            <li><a href="https://wonnone.picpac.kr/" target="_blank">Site</a></li>
+            <li><a href="https://oreroom.com/category/ore-room/737/" target="_blank">Site</a></li>
           </ul>
         </section>
       </footer>
