--- a/outerfile/Jacket.html
+++ b/outerfile/Jacket.html
@@ -10,38 +10,38 @@
   <h2>자켓</h2>
   <section>
     <div class="detail">
-      <img src="../Image/OUTER/flight jacket.jpg">
+      <img src="../Image/OUTER/데님 재킷.jpg">
       <b>
-        <p>항공점퍼</p>
+        <p>데님</p>
       </b>
-      <p>항공기에 탑승하는 조종사 및 승무원들이 착용하는 재킷이다. 군용 항공기 운용을 고려하여 군용품으로 개발된 것이다. 시중에도 이 재킷을 모방하여 만들어진 밀리터리 패션 제품들이 많다</p>
+      <p>청바지 소재로 만들어진 재킷입니다.</p>
     </div><br><br><br><br><br><br>
   </section>
   <section>
     <div class="detail">
-      <img src="../Image/OUTER/down jacket.jpg">
+      <img src="../Image/OUTER/레더 재킷.jpg">
       <b>
-        <p>패딩</p>
+        <p>레더</p>
       </b>
-      <p>패딩은 물새의 솜깃털을 충전재로 사용한 점퍼 스타일의 방한용 상의(윗옷)이다.</p>
+      <p>가죽 소재로 만들어진 재킷으로, 바이커 재킷이 대표적입니다.</p>
     </div><br><br><br><br><br><br>
   </section>
   <section>
     <div class="detail">
-      <img src="../Image/OUTER/MOUTON JUMPER.jpg">
+      <img src="../Image/OUTER/봄버 재킷.jpg">
       <b>
-        <p>무스탕</p>
+        <p>봄버</p>
       </b>
-      <p>털이 붙은 양피로 모피 안면을 스웨드 마무리한 것을 말한다.</p>
+      <p>원래 군용 비행사 재킷으로 시작되어, 짧고 허리와 소매에 밴딩이 있는 디자인입니다.</p>
     </div><br><br><br><br><br><br>
   </section>
   <section>
     <div class="detail">
-      <img src="../Image/OUTER/windbreaker.jpg">
+      <img src="../Image/OUTER/블레이저.jpg">
       <b>
-        <p>바람막이</p>
+        <p>블레이저</p>
       </b>
-      <p>바람과 가벼운 비로부터 인체를 보호해 주는 재킷.</p>
+      <p>격식을 갖춘 디자인으로, 주로 면이나 울 소재로 만들어집니다.</p>
     </div><br><br><br><br><br><br>
   </section>
 </body>
