--- a/acc/belt.html
+++ b/acc/belt.html
@@ -10,21 +10,23 @@
     <h2>벨트</h2>
     <section>
         <div class="detail">
-            <img src="../Image/ACC/BELT/가죽벨트.jpg">
+            <img id="scale" src="../Image/ACC/BELT/가죽벨트.jpg">
             <b>
                 <p>가죽</p>
             </b>
             <p>클래식하고 내구성이 좋은 벨트로, 다양한 스타일과 색상이 있습니다.</p>
-        </div><br><br><br><br><br><br>
+        </div>
+        <br><br><br><br><br><br><br><br>
     </section>
     <section>
         <div class="detail">
-            <img src="../Image/ACC/BELT/체인벨트.jpg">
+            <img id="scale" src="../Image/ACC/BELT/체인벨트.jpg">
             <b>
                 <p>체인</p>
             </b>
             <p>금속 체인으로 된 벨트로, 화려하고 독특한 스타일을 연출합니다.</p>
-        </div><br><br><br><br><br><br>
+        </div>
+        <br><br><br><br><br><br><br><br>
     </section>
 
 </body>
