--- a/acc/hat.html
+++ b/acc/hat.html
@@ -10,7 +10,7 @@
     <h2>모자</h2>
     <section>
         <div class="detail">
-            <img src="../Image/ACC/HAT/버킷햇.jpg">
+            <img id="scale" src="../Image/ACC/HAT/버킷햇.jpg">
             <b>
                 <p>버킷햇</p>
             </b>
@@ -19,30 +19,30 @@
     </section>
     <section>
         <div class="detail">
-            <img src="../Image/ACC/HAT/비니.jpg">
+            <img id="scale" src="../Image/ACC/HAT/비니.jpg">
             <b>
                 <p>비니</p>
             </b>
             <p>머리에 꼭 맞게 착용하는 니트 모자로, 보온성이 좋습니다.</p>
-        </div><br><br><br><br><br><br>
+        </div><br><br><br><br><br><br><br><br>
     </section>
     <section>
         <div class="detail">
-            <img src="../Image/ACC/HAT/캡.jpg ">
+            <img id="scale" src="../Image/ACC/HAT/캡.jpg ">
             <b>
                 <p>캡</p>
             </b>
             <p>캐주얼한 디자인의 모자로, 일상적인 착용에 적합합니다.</p>
-        </div><br><br><br><br><br><br>
+        </div><br><br><br><br><br><br><br><br>
     </section>
     <section>
         <div class="detail">
-            <img src="../Image/ACC/HAT/페도라.jpg ">
+            <img id="scale" src="../Image/ACC/HAT/페도라.jpg ">
             <b>
                 <p>페도라</p>
             </b>
             <p>앞쪽에 굽은 챙이 있는 모자로, 클래식하고 멋스러운 느낌을 줍니다.</p>
-        </div><br><br><br><br><br><br>
+        </div><br><br><br><br><br><br><br><br>
     </section>
 </body>
 
