--- a/bag&shoefile/bag.html
+++ b/bag&shoefile/bag.html
@@ -10,62 +10,62 @@
   <h2>가방</h2>
   <section>
     <div class="detail">
-      <img src="../Image/BAG/더플백.jpg">
+      <img id="scale" src="../Image/BAG/더플백.jpg">
       <b>
         <p>더플백</p>
       </b>
       <p>원통형의 큰 가방으로, 주로 여행이나 운동용으로 사용됩니다.
-        많은 물건을 담을 수 있ㄴ는 공간이 있습니다.</p>
-    </div><br><br><br><br><br><br>
+        많은 물건을 담을 수 있는 공간이 있습니다.</p>
+    </div><br><br><br><br><br><br><br><br>
   </section>
   <section>
     <div class="detail">
-      <img src="../Image/BAG/메신저백.jpg">
+      <img id="scale" src="../Image/BAG/메신저백.jpg">
       <b>
         <p>메신저백</p>
       </b>
       <p>긴 스트랩이 있어 몸을 가로질러 착용할 수 있는 가방으로, 주로 메신저들이 사용하던 가방에서 유래했습니다.
         노트북이나 서류 등을 넣고 다니기에 적합합니다.</p>
-    </div><br><br><br><br><br><br>
+    </div><br><br><br><br><br><br><br><br>
   </section>
   <section>
     <div class="detail">
-      <img src="../Image/BAG/백팩.jpg">
+      <img id="scale" src="../Image/BAG/백팩.jpg">
       <b>
         <p>백팩</p>
       </b>
       <p>두 개의 스트랩으로 양 어깨에 메는 가방입니다.
         주로 학생이나 여행자들이 많이 사용하며, 다양한 크기와 디자인이 있습니다.</p>
-    </div><br><br><br><br><br><br>
+    </div><br><br><br><br><br><br><br><br>
   </section>
   <section>
     <div class="detail">
-      <img src="../Image/BAG/크로스백.jpg">
+      <img id="scale" src="../Image/BAG/크로스백.jpg">
       <b>
         <p>크로스백</p>
       </b>
       <p>긴 스트랩이 있어 몸을 가로질러 착용할 수 있는 가방입니다.</p>
-    </div><br><br><br><br><br><br>
+    </div><br><br><br><br><br><br><br><br>
   </section>
   <section>
     <div class="detail">
-      <img src="../Image/BAG/토트백.jpg">
+      <img id="scale" src="../Image/BAG/토트백.jpg">
       <b>
         <p>토트백</p>
       </b>
       <p>큰 손잡이가 달린 가방으로, 주로 어깨에 걸치거나 손에 들고 다닙니다.
         일상적으로 많이 사용되며, 쇼핑백으로도 활용됩니다.</p>
-    </div><br><br><br><br><br><br>
+    </div><br><br><br><br><br><br><br><br>
   </section>
   <section>
     <div class="detail">
-      <img src="../Image/BAG/호보백.jpg">
+      <img id="scale" src="../Image/BAG/호보백.jpg">
       <b>
         <p>호보백</p>
       </b>
       <p>반달 모양의 부드러운 재질로 만들어진 가방입니다.
         어깨에 걸쳐서 사용하며, 편안하고 캐주얼한 스타일에 잘 어울립니다.</p>
-    </div><br><br><br><br><br><br>
+    </div><br><br><br><br><br><br><br><br>
   </section>
 </body>
 
