--- a/top/blouse.html
+++ b/top/blouse.html
@@ -10,74 +10,74 @@
   <h2>블라우스</h2>
   <section>
     <div class="detail">
-      <img src="../Image/TOP/블라우스/페플럼 블라우스.jpg">
+      <img id="scale" src="../Image/TOP/블라우스/페플럼 블라우스.jpg">
       <b>
         <p>페플럼</p>
       </b>
       <p>허리 부분에 주름이나 플레어 디테일이 있는 블라우스입니다.</p>
     </div>
-    <br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br>
   </section>
 
   <br>
   <section>
     <div class="detail">
-      <img src="../Image/TOP/블라우스/보우블라우스.jpg">
+      <img id="scale" src="../Image/TOP/블라우스/보우블라우스.jpg">
       <b>
         <p>보우</p>
       </b>
       <p>앞 목 부분이 V자 형태로 되어 있습니다. 좀 더 세련된 느낌을 주며, 레이어드 스타일로 많이 사용됩니다.</p>
     </div>
-    <br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br>
   </section>
 
   <br>
   <section>
     <div class="detail">
-      <img src="../Image/TOP/블라우스/랩.jpg">
+      <img id="scale" src="../Image/TOP/블라우스/랩.jpg">
       <b>
         <p>랩</p>
       </b>
       <p>소매가 없는 티셔츠로, 주로 운동할 때나 여름철에 많이 착용합니다.</p>
     </div>
-    <br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br>
   </section>
 
   <br>
   <section>
     <div class="detail">
-      <img src="../Image/TOP/블라우스/오프숄더.jpg">
+      <img id="scale" src="../Image/TOP/블라우스/오프숄더.jpg">
       <b>
         <p>오프숄더</p>
       </b>
       <p>앞 부분에 단추가 몇 개 달려 있는 디자인의 티셔츠입니다. 폴로 셔츠와 라운드 넥 티셔츠의 중간 형태라고 할 수 있습니다.</p>
     </div>
-    <br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br>
   </section>
 
   <br>
   <section>
     <div class="detail">
-      <img src="../Image/TOP/블라우스/퍼프 슬리브.jpg">
+      <img id="scale" src="../Image/TOP/블라우스/퍼프 슬리브.jpg">
       <b>
         <p>퍼프 슬리브</p>
       </b>
       <p>다양한 그래픽 디자인이나 로고, 문구 등이 프린트된 티셔츠입니다. 개인의 취향을 표현하기 좋습니다.</p>
     </div>
-    <br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br>
   </section>
 
 
   <br>
   <section>
     <div class="detail">
-      <img src="../Image/TOP/블라우스/튜닉 블라우스.jpg">
+      <img id="scale" src="../Image/TOP/블라우스/튜닉 블라우스.jpg">
       <b>
         <p>튜닉</p>
       </b>
       <p>엉덩이를 덮는 길이의 블라우스로, 주로 레깅스나 슬림한 하의와 매치합니다.</p>
     </div>
-    <br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br>
   </section>
 
 </body>
