--- a/top/knit.html
+++ b/top/knit.html
@@ -10,52 +10,52 @@
   <h2>니트</h2>
   <section>
     <div class="detail">
-      <img src="../Image/TOP/니트/스웨터.jpg">
+      <img id="scale" src="../Image/TOP/니트/스웨터.jpg">
       <b>
         <p>스웨터</p>
       </b>
       <p>일반적으로 긴 소매를 가진 따뜻한 상의입니다.
         브이넥, 라운드넥, 터틀넥 등 다양한 목선 디자인이 있습니다.</p>
     </div>
-    <br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br>
   </section>
 
   <br>
   <section>
     <div class="detail">
-      <img src="../Image/TOP/니트/카디건.jpg">
+      <img id="scale" src="../Image/TOP/니트/카디건.jpg">
       <b>
         <p>카디건</p>
       </b>
       <p>앞부분에 단추가 있어 열고 닫을 수 있는 스웨터입니다.
         일반적으로 V넥이나 라운드넥 디자인입니다.</p>
     </div>
-    <br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br>
   </section>
 
   <br>
   <section>
     <div class="detail">
-      <img src="../Image/TOP/니트/풀오버.jpg">
+      <img id="scale" src="../Image/TOP/니트/풀오버.jpg">
       <b>
         <p>풀오버</p>
       </b>
       <p>단추나 지퍼가 없이 머리 위로 입는 스웨터입니다.
         다양한 목선과 소매 길이로 제공됩니다.</p>
     </div>
-    <br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br>
   </section>
 
   <br>
   <section>
     <div class="detail">
-      <img src="../Image/TOP/니트/베스트.jpg">
+      <img id="scale" src="../Image/TOP/니트/베스트.jpg">
       <b>
         <p>베스트</p>
       </b>
       <p>소매가 없는 상의로, 주로 셔츠 위에 레이어드하여 입습니다.</p>
     </div>
-    <br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br>
   </section>
 </body>
 
