--- a/outerfile/Jacket.html
+++ b/outerfile/Jacket.html
@@ -10,39 +10,43 @@
   <h2>자켓</h2>
   <section>
     <div class="detail">
-      <img src="../Image/OUTER/데님 재킷.jpg">
+      <img id="scale" src="../Image/OUTER/데님 재킷.jpg">
       <b>
         <p>데님</p>
       </b>
       <p>청바지 소재로 만들어진 재킷입니다.</p>
-    </div><br><br><br><br><br><br>
+    </div>
+    <br><br><br><br><br><br><br><br>
   </section>
   <section>
     <div class="detail">
-      <img src="../Image/OUTER/레더 재킷.jpg">
+      <img id="scale" src="../Image/OUTER/레더 재킷.jpg">
       <b>
         <p>레더</p>
       </b>
       <p>가죽 소재로 만들어진 재킷으로, 바이커 재킷이 대표적입니다.</p>
-    </div><br><br><br><br><br><br>
+    </div>
+    <br><br><br><br><br><br><br><br>
   </section>
   <section>
     <div class="detail">
-      <img src="../Image/OUTER/봄버 재킷.jpg">
+      <img id="scale" src="../Image/OUTER/봄버 재킷.jpg">
       <b>
         <p>봄버</p>
       </b>
       <p>원래 군용 비행사 재킷으로 시작되어, 짧고 허리와 소매에 밴딩이 있는 디자인입니다.</p>
-    </div><br><br><br><br><br><br>
+    </div>
+    <br><br><br><br><br><br><br><br>
   </section>
   <section>
     <div class="detail">
-      <img src="../Image/OUTER/블레이저.jpg">
+      <img id="scale" src="../Image/OUTER/블레이저.jpg">
       <b>
         <p>블레이저</p>
       </b>
       <p>격식을 갖춘 디자인으로, 주로 면이나 울 소재로 만들어집니다.</p>
-    </div><br><br><br><br><br><br>
+    </div>
+    <br><br><br><br><br><br><br><br>
   </section>
 </body>
 
