--- a/kind/BAG&SHOE.html
+++ b/kind/BAG&SHOE.html
@@ -20,6 +20,7 @@
                     <a href="../index.html">
                         <h1>Doremihyeon clothes</h1>
                     </a>
+                    <a href="register/register.html" class="signin"><img src="/Image/login.png"></a>
                 </div>
                 <hr>
                 <div id="cen">
@@ -30,7 +31,8 @@
                             <li><a href="../kind/OUTER.html" target="_parent">외투(OUTER)</a></li>
                             <li><a href="../kind/BAG&SHOE.html" target="_parent">가방&신발(BAG&SHOE)</a></li>
                             <li><a href="../kind/ACC.html" target="_parent">악세서리(ACC)</a></li>
-                            <li><a href="../kind/Information.html" target="_parent">체형코디</a></li>
+                            <li><a href="https://m.post.naver.com/viewer/postView.nhn?volumeNo=28836073&memberNo=2843145"
+                                    target="_blank">체형코디</a>
                         </ul>
                     </nav>
                 </div>
