--- a/acc/bracelet.html
+++ b/acc/bracelet.html
@@ -15,7 +15,7 @@
                 <p>가죽</p>
             </b>
             <p>가죽 소재로 만들어져 캐주얼하고 내추럴한 느낌을 줍니다.</p>
-        </div><br><br><br><br><br><br><br><br>
+        </div><br><br><br><br><br><br><br><br><br><br>
     </section>
     <section>
         <div class="detail">
@@ -24,7 +24,7 @@
                 <p>뱅글</p>
             </b>
             <p>단단한 고리 형태의 팔찌로, 슬립온 타입으로 착용합니다. 금속, 나무, 플라스틱 등 다양한 소재로 만들어집니다.</p>
-        </div><br><br><br><br><br><br><br><br>
+        </div><br><br><br><br><br><br><br><br><br><br>
     </section>
     <section>
         <div class="detail">
@@ -33,7 +33,7 @@
                 <p>참</p>
             </b>
             <p>작은 장식물(참)을 달 수 있는 팔찌로, 개인의 취향에 맞게 커스터마이즈할 수 있습니다.</p>
-        </div><br><br><br><br><br><br><br><br>
+        </div><br><br><br><br><br><br><br><br><br><br>
     </section>
 </body>
 
