--- a/acc/earing.html
+++ b/acc/earing.html
@@ -15,7 +15,7 @@
                 <p>드롭</p>
             </b>
             <p>귀걸이에서 아래로 길게 늘어지는 스타일로, 다양한 디자인과 길이가 있으며 화려한 느낌을 줍니다.</p>
-        </div><br><br><br><br><br><br><br><br>
+        </div><br><br><br><br><br><br><br><br><br><br><br><br>
     </section>
     <section>
         <div class="detail">
@@ -24,7 +24,7 @@
                 <p>스터드</p>
             </b>
             <p>작고 단순한 디자인의 귀걸이로, 일상적인 착용에 적합하며 주로 작은 보석이나 금속으로 만들어집니다.</p>
-        </div><br><br><br><br><br><br><br><br>
+        </div><br><br><br><br><br><br><br><br><br><br><br><br>
     </section>
     <section>
         <div class="detail">
@@ -33,7 +33,7 @@
                 <p>후프</p>
             </b>
             <p>원형 모양의 귀걸이로, 크기와 두께가 다양하며, 클래식한 디자인으로 어떤 옷과도 잘 어울립니다.</p>
-        </div><br><br><br><br><br><br><br><br>
+        </div><br><br><br><br><br><br><br><br><br><br><br><br>
     </section>
 </body>
 
