--- a/acc/hat.html
+++ b/acc/hat.html
@@ -15,7 +15,7 @@
                 <p>버킷햇</p>
             </b>
             <p>챙이 넓고 부드러운 모자로, 캐주얼하고 편안한 스타일을 연출합니다.</p>
-        </div><br><br><br><br><br><br>
+        </div><br><br><br><br><br><br><br><br><br><br>
     </section>
     <section>
         <div class="detail">
@@ -24,7 +24,7 @@
                 <p>비니</p>
             </b>
             <p>머리에 꼭 맞게 착용하는 니트 모자로, 보온성이 좋습니다.</p>
-        </div><br><br><br><br><br><br><br><br>
+        </div><br><br><br><br><br><br><br><br><br><br>
     </section>
     <section>
         <div class="detail">
@@ -33,7 +33,7 @@
                 <p>캡</p>
             </b>
             <p>캐주얼한 디자인의 모자로, 일상적인 착용에 적합합니다.</p>
-        </div><br><br><br><br><br><br><br><br>
+        </div><br><br><br><br><br><br><br><br><br><br>
     </section>
     <section>
         <div class="detail">
@@ -42,7 +42,7 @@
                 <p>페도라</p>
             </b>
             <p>앞쪽에 굽은 챙이 있는 모자로, 클래식하고 멋스러운 느낌을 줍니다.</p>
-        </div><br><br><br><br><br><br><br><br>
+        </div><br><br><br><br><br><br><br><br><br><br>
     </section>
 </body>
 
