--- a/acc/watch.html
+++ b/acc/watch.html
@@ -15,7 +15,7 @@
                 <p>디지털</p>
             </b>
             <p>디지털 디스플레이로 시간을 표시하며, 현대적이고 기능적입니다.</p>
-        </div><br><br><br><br><br><br><br><br>
+        </div><br><br><br><br><br><br><br><br><br><br>
     </section>
     <section>
         <div class="detail">
@@ -24,7 +24,7 @@
                 <p>아날로그</p>
             </b>
             <p>길게 늘어지는 체인 목걸이로, 캐주얼한 룩이나 포멀한 룩 모두에 잘 어울립니다.</p>
-        </div><br><br><br><br><br><br><br><br>
+        </div><br><br><br><br><br><br><br><br><br><br>
     </section>
 </body>
 
