--- a/bag&shoefile/shoe.html
+++ b/bag&shoefile/shoe.html
@@ -15,7 +15,7 @@
         <p>구두</p>
       </b>
       <p>정장이나 공식적인 자리에서 신는 신발로, 옥스퍼드, 더비, 몽크 스트랩 등 다양한 종류가 있습니다.</p>
-    </div><br><br><br><br><br><br><br><br>
+    </div><br><br><br><br><br><br><br><br><br><br>
   </section>
   <section>
     <div class="detail">
@@ -24,7 +24,7 @@
         <p>로퍼</p>
       </b>
       <p>끈이 없고 간편하게 신을 수 있는 구두로, 주로 캐주얼하거나 반정장 스타일에 어울립니다.</p>
-    </div><br><br><br><br><br><br><br><br>
+    </div><br><br><br><br><br><br><br><br><br><br>
   </section>
   <section>
     <div class="detail">
@@ -33,7 +33,7 @@
         <p>부츠</p>
       </b>
       <p>발목 이상을 덮는 신발로, 겨울철이나 아웃도어 활동 시 주로 신습니다. 종류로는 첼시 부츠, 워커, 하이킹 부츠 등이 있습니다.</p>
-    </div><br><br><br><br><br><br><br><br>
+    </div><br><br><br><br><br><br><br><br><br><br>
   </section>
   <section>
     <div class="detail">
@@ -42,7 +42,7 @@
         <p>샌들</p>
       </b>
       <p>발가락이 노출되는 신발로, 여름철이나 캐주얼한 자리에서 주로 신습니다. 슬라이드, 플립플랍, 글래디에이터 샌들 등이 있습니다.</p>
-    </div><br><br><br><br><br><br><br><br>
+    </div><br><br><br><br><br><br><br><br><br><br>
   </section>
   <section>
     <div class="detail">
@@ -51,7 +51,7 @@
         <p>슬리퍼</p>
       </b>
       <p>집 안에서 편하게 신을 수 있는 신발로, 실내화라고도 불립니다.</p>
-    </div><br><br><br><br><br><br><br><br>
+    </div><br><br><br><br><br><br><br><br><br><br>
   </section>
   <section>
     <div class="detail">
@@ -60,7 +60,7 @@
         <p>슬립온</p>
       </b>
       <p>끈이나 버클이 없이 간편하게 신을 수 있는 신발로, 스니커즈와 비슷하지만 더 간편하게 신을 수 있습니다.</p>
-    </div><br><br><br><br><br><br><br><br>
+    </div><br><br><br><br><br><br><br><br><br><br>
   </section>
   <section>
     <div class="detail">
@@ -69,7 +69,7 @@
         <p>운동화</p>
       </b>
       <p>일상적인 착용 및 운동을 위해 설계된 신발로, 편안하고 다양한 디자인이 있습니다.</p>
-    </div><br><br><br><br><br><br><br><br>
+    </div><br><br><br><br><br><br><br><br><br><br>
   </section>
   <section>
     <div class="detail">
@@ -78,7 +78,7 @@
         <p>플랫슈즈</p>
       </b>
       <p>굽이 낮거나 없는 신발로, 발에 편안함을 주는 것이 특징입니다. 발레 플랫, 로퍼 등이 이에 속합니다.</p>
-    </div><br><br><br><br><br><br><br><br>
+    </div><br><br><br><br><br><br><br><br><br><br>
   </section>
   <section>
     <div class="detail">
@@ -87,7 +87,7 @@
         <p>하이힐</p>
       </b>
       <p>주로 여성들이 신는 굽 높은 신발로, 정장이나 드레스와 함께 착용합니다. 스틸레토, 펌프스, 웨지힐 등이 있습니다.</p>
-    </div><br><br><br><br><br><br><br><br>
+    </div><br><br><br><br><br><br><br><br><br><br>
   </section>
 </body>
 
