--- a/bottom/onepiece.html
+++ b/bottom/onepiece.html
@@ -15,7 +15,7 @@
         <p>미니</p>
       </b>
       <p>허벅지 중간 정도까지 오는 짧은 길이로, 주로 젊고 발랄한 느낌을 주며, 파티나 클럽에서 많이 입습니다.</p>
-    </div><br><br><br><br><br><br><br><br>
+    </div><br><br><br><br><br><br><br><br><br><br>
   </section>
   <section>
     <div class="detail">
@@ -24,7 +24,7 @@
         <p>미디</p>
       </b>
       <p>무릎 아래까지 오는 길이로, 다양한 체형에 잘 어울리며, 캐주얼한 스타일부터 포멀한 스타일까지 다양하게 연출할 수 있습니다.</p>
-    </div><br><br><br><br><br><br><br><br>
+    </div><br><br><br><br><br><br><br><br><br><br>
   </section>
   <section>
     <div class="detail">
@@ -33,7 +33,7 @@
         <p>맥시</p>
       </b>
       <p>발목까지 길게 내려오는 스타일로, 편안하면서도 우아한 느낌을 줄 수 있습니다. 여름철이나 휴가철에 많이 착용됩니다.</p>
-    </div><br><br><br><br><br><br><br><br>
+    </div><br><br><br><br><br><br><br><br><br><br>
   </section>
 </body>
 <section>
@@ -43,7 +43,7 @@
       <p>오프숄더</p>
     </b>
     <p>어깨를 드러내는 디자인으로, 섹시하고 우아한 느낌을 줍니다. 주로 여름철이나 특별한 행사에서 많이 착용됩니다.</p>
-  </div><br><br><br><br><br><br><br><br>
+  </div><br><br><br><br><br><br><br><br><br><br>
 </section>
 </body>
 <section>
@@ -53,7 +53,7 @@
       <p>셔츠</p>
     </b>
     <p>셔츠를 길게 늘린 형태의 원피스로, 캐주얼하고 편안한 느낌을 줍니다. 일상적인 착용이나 비즈니스 캐주얼로 적합합니다.</p>
-  </div><br><br><br><br><br><br><br><br>
+  </div><br><br><br><br><br><br><br><br><br><br>
 </section>
 </body>
 
