--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
 
   <header>
     <div id="top">
-      <ul>
-        <li><a href="register/register.html">Sign In</a></li>
-      </ul>
     </div>
     </div>
     <div id="container">
@@ -21,8 +18,8 @@
         <div id="logo">
           <a href="index.html">
             <h1>Doremihyeon clothes</h1>
-
           </a>
+          <a href="register/register.html" class="signin"><img src="/Image/login.png"></a>
         </div>
         <hr>
         <div id="cen">
@@ -33,7 +30,9 @@
               <li><a href="kind/OUTER.html" target="_parent">외투(OUTER)</a></li>
               <li><a href="kind/BAG&SHOE.html" target="_parent">가방&신발(BAG&SHOE)</a></li>
               <li><a href="kind/ACC.html" target="_parent">악세서리(ACC)</a></li>
-              <li><a href="kind/Information.html" target="_parent">체형코디</a></li>
+              <li><a href="https://m.post.naver.com/viewer/postView.nhn?volumeNo=28836073&memberNo=2843145"
+                  target="_blank">체형코디</a>
+              </li>
             </ul>
           </nav>
         </div>
@@ -45,8 +44,6 @@
       <footer>
         <section id="bottomMenu">
           <ul>
-            <li><a href="other/TOP.html">TOP 10</a></li>
-            <li><a href="other/basket.html">Shopping basket</a></li>
             <li><a href="https://oreroom.com/category/ore-room/737/" target="_blank">Site</a></li>
           </ul>
         </section>
