--- a/bag&shoefile/shoe.html
+++ b/bag&shoefile/shoe.html
@@ -10,16 +10,7 @@
   <h2>신발</h2>
   <section>
     <div class="detail">
-      <img src="../Image/SHOES/구두.jpg">
-      <b>
-        <p>구두</p>
-      </b>
-      <p>정장이나 공식적인 자리에서 신는 신발로, 옥스퍼드, 더비, 몽크 스트랩 등 다양한 종류가 있습니다.</p>
-    </div><br><br><br><br><br><br><br><br><br><br>
-  </section>
-  <section>
-    <div class="detail">
-      <img src="../Image/SHOES/로퍼.jpg">
+      <img id="scale" src="../Image/SHOES/로퍼.jpg">
       <b>
         <p>로퍼</p>
       </b>
@@ -28,7 +19,7 @@
   </section>
   <section>
     <div class="detail">
-      <img src="../Image/SHOES/부츠.jpg">
+      <img id="scale" src="../Image/SHOES/부츠.jpg">
       <b>
         <p>부츠</p>
       </b>
@@ -37,7 +28,7 @@
   </section>
   <section>
     <div class="detail">
-      <img src="../Image/SHOES/샌들.jpg">
+      <img id="scale" src="../Image/SHOES/샌들.jpg">
       <b>
         <p>샌들</p>
       </b>
@@ -46,25 +37,7 @@
   </section>
   <section>
     <div class="detail">
-      <img src="../Image/SHOES/슬리퍼.jpg">
-      <b>
-        <p>슬리퍼</p>
-      </b>
-      <p>집 안에서 편하게 신을 수 있는 신발로, 실내화라고도 불립니다.</p>
-    </div><br><br><br><br><br><br><br><br><br><br>
-  </section>
-  <section>
-    <div class="detail">
-      <img src="../Image/SHOES/슬립온.jpg">
-      <b>
-        <p>슬립온</p>
-      </b>
-      <p>끈이나 버클이 없이 간편하게 신을 수 있는 신발로, 스니커즈와 비슷하지만 더 간편하게 신을 수 있습니다.</p>
-    </div><br><br><br><br><br><br><br><br><br><br>
-  </section>
-  <section>
-    <div class="detail">
-      <img src="../Image/SHOES/운동화.jpg">
+      <img id="scale" src="../Image/SHOES/운동화.jpg">
       <b>
         <p>운동화</p>
       </b>
@@ -73,7 +46,7 @@
   </section>
   <section>
     <div class="detail">
-      <img src="../Image/SHOES/플랫슈즈.jpg">
+      <img id="scale" src="../Image/SHOES/플랫슈즈.jpg">
       <b>
         <p>플랫슈즈</p>
       </b>
