--- a/bottom/onepiece.html
+++ b/bottom/onepiece.html
@@ -10,7 +10,7 @@
   <h2>원피스</h2>
   <section>
     <div class="detail">
-      <img src="../Image/BOTTOM/ONEPIECE/미니 원피스.jpg">
+      <img id="scale" src="../Image/BOTTOM/ONEPIECE/미니 원피스.jpg">
       <b>
         <p>미니</p>
       </b>
@@ -19,7 +19,7 @@
   </section>
   <section>
     <div class="detail">
-      <img src="../Image/BOTTOM/ONEPIECE/미디 원피스.jpg">
+      <img id="scale" src="../Image/BOTTOM/ONEPIECE/미디 원피스.jpg">
       <b>
         <p>미디</p>
       </b>
@@ -28,7 +28,7 @@
   </section>
   <section>
     <div class="detail">
-      <img src="../Image/BOTTOM/ONEPIECE/맥시원피스.jpg">
+      <img id="scale" src="../Image/BOTTOM/ONEPIECE/맥시원피스.jpg">
       <b>
         <p>맥시</p>
       </b>
