--- a/bottom/pants.html
+++ b/bottom/pants.html
@@ -10,7 +10,7 @@
   <h2>바지</h2>
   <section>
     <div class="detail">
-      <img src="../Image/BOTTOM/PANTS/청바지.jpg">
+      <img id="scale" src="../Image/BOTTOM/PANTS/청바지.jpg">
       <b>
         <p>청바지</p>
       </b>
@@ -21,7 +21,7 @@
   <br>
   <section>
     <div class="detail">
-      <img src="../Image/BOTTOM/PANTS/슬랙스.jpg">
+      <img id="scale" src="../Image/BOTTOM/PANTS/슬랙스.jpg">
       <b>
         <p>슬랙스</p>
       </b>
@@ -32,7 +32,7 @@
   <br>
   <section>
     <div class="detail">
-      <img src="../Image/BOTTOM/PANTS/조거팬츠.jpg">
+      <img id="scale" src="../Image/BOTTOM/PANTS/조거팬츠.jpg">
       <b>
         <p>조거팬츠</p>
       </b>
@@ -43,7 +43,7 @@
   <br>
   <section>
     <div class="detail">
-      <img src="../Image/BOTTOM/PANTS/카고팬츠.jpg">
+      <img id="scale" src="../Image/BOTTOM/PANTS/카고팬츠.jpg">
       <b>
         <p>카고팬츠</p>
       </b>
@@ -54,7 +54,7 @@
   <br>
   <section>
     <div class="detail">
-      <img src="../Image/BOTTOM/PANTS/카프리팬츠.jpg">
+      <img id="scale" src="../Image/BOTTOM/PANTS/카프리팬츠.jpg">
       <b>
         <p>카프리팬츠</p>
       </b>
