--- a/bottom/skirt.html
+++ b/bottom/skirt.html
@@ -10,7 +10,7 @@
   <h2>스커트</h2>
   <section>
     <div class="detail">
-      <img src="../Image/BOTTOM/SKIRT/미니스커트.jpg">
+      <img id="scale" src="../Image/BOTTOM/SKIRT/미니스커트.jpg">
       <b>
         <p>미니</p>
       </b>
@@ -19,7 +19,7 @@
   </section>
   <section>
     <div class="detail">
-      <img src="../Image/BOTTOM/SKIRT/미디스커트.jpg">
+      <img id="scale" src="../Image/BOTTOM/SKIRT/미디스커트.jpg">
       <b>
         <p>미디</p>
       </b>
@@ -28,7 +28,7 @@
   </section>
   <section>
     <div class="detail">
-      <img id="scale" src="../Image/BOTTOM/SKIRT/맥시스커트.jpg">
+      <img id="scale" id="scale" src="../Image/BOTTOM/SKIRT/맥시스커트.jpg">
       <b>
         <p>맥시</p>
       </b>
@@ -64,7 +64,7 @@
   </section>
   <section>
     <div class="detail">
-      <img src="../Image/BOTTOM/SKIRT/티어드 스커트.png">
+      <img id="scale" src="../Image/BOTTOM/SKIRT/티어드 스커트.png">
       <b>
         <p>티어드</p>
       </b>
