--- a/kind/TOP.html
+++ b/kind/TOP.html
@@ -15,7 +15,7 @@
     <div id="container">
       <header>
         <div id="logo">
-          <a href="../index.html">
+          <a href="../setup-finish.html">
             <h1>Doremihyeon clothes</h1>
           </a>
           <a href="register/register.html" class="signin"><img src="/Image/login.png"></a>
@@ -29,30 +29,30 @@
               <li><a href="../kind/OUTER.html" target="_parent">외투(OUTER)</a></li>
               <li><a href="../kind/BAG&SHOE.html" target="_parent">가방&신발(BAG&SHOE)</a></li>
               <li><a href="../kind/ACC.html" target="_parent">악세서리(ACC)</a></li>
-              <li><a href="https://m.post.naver.com/viewer/postView.nhn?volumeNo=28836073&memberNo=2843145"
-                  target="_blank">체형코디</a>
             </ul>
           </nav>
         </div>
       </header>
       <main class="contents">
         <h3 class="textcen">TOP</h3>
-        <div id="ucen">
+        <div id="ucen1">
           <ul id="ulist">
-            <li><a href="../top/Tshirts.html" target="jwframe">티셔츠</a></li>
-            <li><a href="../top/knit.html" target="jwframe">니트</a></li>
-            <li><a href="../top/blouse.html" target="jwframe">블라우스</a></li>
-            <li><a href="../top/shirts.html" target="jwframe">셔츠</a></li>
-            <li><a href="../top/inner.html" target="jwframe">이너</a></li>
+            <li><a href="../top/Tshirts.html" target="mhframe">티셔츠</a></li>
+            <li><a href="../top/knit.html" target="mhframe">니트</a></li>
+            <li><a href="../top/blouse.html" target="mhframe">블라우스</a></li>
+            <li><a href="../top/shirts.html" target="mhframe">셔츠</a></li>
+            <li><a href="../top/inner.html" target="mhframe">이너</a></li>
           </ul>
         </div>
-        <iframe id="frames" src="../top/Tshirts.html" name="jwframe"></iframe>
+        <iframe id="frames1" src="../top/Tshirts.html" name="mhframe"></iframe>
       </main>
 
       <footer>
         <section id="bottomMenu">
           <ul>
-            <li><a href="https://oreroom.com/category/ore-room/737/" target="_blank">Site</a></li>
+            <li><a href="https://oreroom.com/category/ore-room/737/" target="_blank">참고사이트</a></li>
+            <li><a>김미현 algus04617@gmail.com </a></li>
+            <li><a>대표자 번호 : 010-9909-5221 </a></li>
           </ul>
         </section>
       </footer>
