--- a/top/knit.html
+++ b/top/knit.html
@@ -57,6 +57,28 @@
     </div>
     <br><br><br><br><br><br><br><br><br><br>
   </section>
+  <br>
+  <section>
+    <div class="detail">
+      <img id="scale" src="../Image/TOP/니트/프린지 니트.jpg">
+      <b>
+        <p>프린지</p>
+      </b>
+      <p>밑단이나 소매에 프린지(술)가 달린 디자인의 니트로, 보헤미안 스타일을 연출합니다.</p>
+    </div>
+    <br><br><br><br><br><br><br><br><br><br>
+  </section>
+  <br>
+  <section>
+    <div class="detail">
+      <img id="scale" src="../Image/TOP/니트/터틀넥.jpg">
+      <b>
+        <p>터틀넥</p>
+      </b>
+      <p>목을 덮는 높고 접히는 칼라가 특징인 니트로, 보온성이 뛰어납니다.</p>
+    </div>
+    <br><br><br><br><br><br><br><br><br><br>
+  </section>
 </body>
 
 </html>
