--- a/top/shirts.html
+++ b/top/shirts.html
@@ -54,7 +54,17 @@
         </div>
         <br><br><br><br><br><br><br><br><br><br>
     </section>
-
+    <br>
+    <section>
+        <div class="detail">
+            <img id="scale" src="../Image/TOP/셔츠/코듀로이.jpg">
+            <b>
+                <p>코듀로이</p>
+            </b>
+            <p>따뜻하고 튼튼한 코듀로이 소재로 만든 셔츠로, 가을과 겨울에 적합합니다.</p>
+        </div>
+        <br><br><br><br><br><br><br><br><br><br>
+    </section>
 </body>
 
 </html>
