--- a/kind/ACC.html
+++ b/kind/ACC.html
@@ -14,7 +14,7 @@
     <div id="container">
       <header>
         <div id="logo">
-          <a href="../index.html">
+          <a href="../setup-finish.html">
             <h1>Doremihyeon clothes</h1>
           </a>
           <a href="register/register.html" class="signin"><img src="/Image/login.png"></a>
@@ -28,33 +28,31 @@
               <li><a href="../kind/OUTER.html" target="_parent">외투(OUTER)</a></li>
               <li><a href="../kind/BAG&SHOE.html" target="_parent">가방&신발(BAG&SHOE)</a></li>
               <li><a href="../kind/ACC.html" target="_parent">악세서리(ACC)</a></li>
-              <li><a href="https://m.post.naver.com/viewer/postView.nhn?volumeNo=28836073&memberNo=2843145"
-                  target="_blank">체형코디</a>
             </ul>
           </nav>
         </div>
       </header>
       <main class="contents">
         <h3 class="textcen">ACC</h3>
-        <div id="ucen">
+        <div id="ucen5">
           <ul id="ulist">
-            <li><a href="../acc/belt.html" target="jwframe">벨트</a></li>
-            <li><a href="../acc/bracelet.html" target="jwframe">팔찌</a></li>
-            <li><a href="../acc/earing.html" target="jwframe">귀걸이</a></li>
-            <li><a href="../acc/neckles.html" target="jwframe">목걸이</a></li>
-            <li><a href="../acc/hat.html" target="jwframe">모자</a></li>
-            <li><a href="../acc/watch.html" target="jwframe">시계</a></li>
+            <li><a href="../acc/belt.html" target="mhframe">벨트</a></li>
+            <li><a href="../acc/bracelet.html" target="mhframe">팔찌</a></li>
+            <li><a href="../acc/earing.html" target="mhframe">귀걸이</a></li>
+            <li><a href="../acc/neckles.html" target="mhframe">목걸이</a></li>
+            <li><a href="../acc/hat.html" target="mhframe">모자</a></li>
+            <li><a href="../acc/watch.html" target="mhframe">시계</a></li>
           </ul>
         </div>
-        <iframe id="frames" src="../acc/belt.html" name="jwframe"></iframe>
+        <iframe id="frames3" src="../acc/belt.html" name="mhframe"></iframe>
       </main>
 
       <footer>
         <section id="bottomMenu">
           <ul>
-            <li><a href="../other/TOP.html">TOP 10</a></li>
-            <li><a href="../other/basket.html">Shopping basket</a></li>
-            <li><a href="https://oreroom.com/category/ore-room/737/" target="_blank">Site</a></li>
+            <li><a href="https://oreroom.com/category/ore-room/737/" target="_blank">참고사이트</a></li>
+            <li><a>김미현 algus04617@gmail.com </a></li>
+            <li><a>대표자 번호 : 010-9909-5221 </a></li>
           </ul>
         </section>
       </footer>
