--- a/kind/BOTTOM.html
+++ b/kind/BOTTOM.html
@@ -15,7 +15,7 @@
     <div id="container">
       <header>
         <div id="logo">
-          <a href="../index.html">
+          <a href="../setup-finish.html">
             <h1>Doremihyeon clothes</h1>
           </a>
           <a href="register/register.html" class="signin"><img src="/Image/login.png"></a>
@@ -29,30 +29,28 @@
               <li><a href="../kind/OUTER.html" target="_parent">외투(OUTER)</a></li>
               <li><a href="../kind/BAG&SHOE.html" target="_parent">가방&신발(BAG&SHOE)</a></li>
               <li><a href="../kind/ACC.html" target="_parent">악세서리(ACC)</a></li>
-              <li><a href="https://m.post.naver.com/viewer/postView.nhn?volumeNo=28836073&memberNo=2843145"
-                  target="_blank">체형코디</a>
             </ul>
           </nav>
         </div>
       </header>
       <main class="contents">
         <h3 class="textcen">BOTTOM</h3>
-        <div id="ucen">
+        <div id="ucen3">
           <ul id="ulist">
-            <li><a href="../bottom/pants.html" target="jwframe">바지</a></li>
-            <li><a href="../bottom/skirt.html" target="jwframe">스커트</a></li>
-            <li><a href="../bottom/onepiece.html" target="jwframe">원피스</a></li>
+            <li><a href="../bottom/pants.html" target="mhframe">바지</a></li>
+            <li><a href="../bottom/skirt.html" target="mhframe">스커트</a></li>
+            <li><a href="../bottom/onepiece.html" target="mhframe">원피스</a></li>
           </ul>
         </div>
-        <iframe id="frames" src="../bottom/pants.html" name="jwframe"></iframe>
+        <iframe id="frames1" src="../bottom/pants.html" name="mhframe"></iframe>
       </main>
 
       <footer>
         <section id="bottomMenu">
           <ul>
-            <li><a href="../other/TOP.html">TOP 10</a></li>
-            <li><a href="../other/basket.html">Shopping basket</a></li>
-            <li><a href="https://oreroom.com/category/ore-room/737/" target="_blank">Site</a></li>
+            <li><a href="https://oreroom.com/category/ore-room/737/" target="_blank">참고사이트</a></li>
+            <li><a>김미현 algus04617@gmail.com </a></li>
+            <li><a>대표자 번호 : 010-9909-5221 </a></li>
           </ul>
         </section>
       </footer>
