--- a/outerfile/Coat.html
+++ b/outerfile/Coat.html
@@ -28,6 +28,36 @@
     </div>
     <br><br><br><br><br><br><br><br><br><br>
   </section>
+  <section>
+    <div class="detail">
+      <img id="scale" src="../Image/OUTER/더플코트.jpg">
+      <b>
+        <p>더플</p>
+      </b>
+      <p>나무나 가죽 토글 단추와 후드가 특징인 두꺼운 울 코트로, 캐주얼한 스타일을 연출합니다.</p>
+    </div>
+    <br><br><br><br><br><br><br><br><br><br>
+  </section>
+  <section>
+    <div class="detail">
+      <img id="scale" src="../Image/OUTER/본디드.jpeg">
+      <b>
+        <p>본디드</p>
+      </b>
+      <p>두 겹 이상의 소재를 붙여 만든 코트로, 보온성과 내구성이 뛰어납니다.</p>
+    </div>
+    <br><br><br><br><br><br><br><br><br><br>
+  </section>
+  <section>
+    <div class="detail">
+      <img id="scale" src="../Image/OUTER/케이프코트.jpg">
+      <b>
+        <p>케이프</p>
+      </b>
+      <p>소매가 없이 어깨를 감싸는 디자인의 코트로, 독특하고 우아한 스타일을 제공합니다.</p>
+    </div>
+    <br><br><br><br><br><br><br><br><br><br>
+  </section>
 </body>
 
 </html>
