--- a/setup-finish.html
+++ b/setup-finish.html
@@ -16,7 +16,7 @@
     <div id="container">
       <header>
         <div id="logo">
-          <a href="index.html">
+          <a href="setup-finish.html">
             <h1>Doremihyeon clothes</h1>
           </a>
           <a href="register/register.html" class="signin"><img src="/Image/login.png"></a>
@@ -30,8 +30,6 @@
               <li><a href="kind/OUTER.html" target="_parent">외투(OUTER)</a></li>
               <li><a href="kind/BAG&SHOE.html" target="_parent">가방&신발(BAG&SHOE)</a></li>
               <li><a href="kind/ACC.html" target="_parent">악세서리(ACC)</a></li>
-              <li><a href="https://m.post.naver.com/viewer/postView.nhn?volumeNo=28836073&memberNo=2843145"
-                  target="_blank">체형코디</a>
               </li>
             </ul>
           </nav>
@@ -44,7 +42,9 @@
       <footer>
         <section id="bottomMenu">
           <ul>
-            <li><a href="https://oreroom.com/category/ore-room/737/" target="_blank">Site</a></li>
+            <li><a href="https://oreroom.com/category/ore-room/737/" target="_blank">참고사이트</a></li>
+            <li><a>김미현 algus04617@gmail.com </a></li>
+            <li><a>대표자 번호 : 010-9909-5221 </a></li>
           </ul>
         </section>
       </footer>
